# circler

./: .gitignore  CHANGELOG.md  DEMO.md  PURE-NIX.md  README.md  flake.nix  generate-config.py  package.nix  pyproject.toml  shell.nix
.circleci/: config.yml
scripts/: analyze-derivations.py  test-analyzer-offline.py  test-local.sh
src/circler/: cheerp.py  circleci.py  drv.py  exec.py  main.py  steps.py  version.py
src/package-a/: main.c
src/package-b/: main.c
src/package-c/: main.c
src/package-d/: main.c
test/: release.nix
